# file-parser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
routers/: extract.py  upload.py
services/: image_converter.py  llm.py  ocr.py
test/entity_extraction/: test_batch.py
test/individual_profile_extraction/: test_batch.py
tests/: test_batch.py
